--------------

Not yet  BJH  Release 10.53.00

              pngtopam: include tuple type in output.  Thanks
              Thomas Henlich <thenlich@users.sourceforge.net>.

              sunicontopnm: Understands Depth=8.  Thanks Prophet of the Way
              <afu@wta.att.ne.jp>.

              sunicontopnm: Validate header.  Thanks Prophet of the Way
              <afu@wta.att.ne.jp>.

              pm_mallocarray2: fix wild pointers when image is too big to fit
              in a single chunk of malloc memory.  Affects many Netpbm
              programs.  Introduced in 10.51.00.

              ilbmtoppm: Don't crash on image that has a transparent color
              index, but no color map.

              sunicontopnm: fix for 32 bit items in input.  Thanks Prophet of
              the Way <afu@wta.att.ne.jp>.

              sunicontopnm: fix arithmetic overflows.  Thanks Prophet of the
              Way <afu@wta.att.ne.jp>.

              icontopbm: rename to sunicontopnm.

              pamstereogram: Add mapped texture stereogram option.
              Thanks Scott Pakin.

              pamstereogram: slight change to dpi and eye separation defaults.
              invert near/far dark/light association.  Thanks Scott Pakin.

              pnmtops: Fix incorrect output with -flate.  Thanks Prophet of
              the Way <afu@wta.att.ne.jp>.

              sgitopnm: Fix arithmetic overflow on -channel option.  Thanks
              Prophet of the Way <afu@wta.att.ne.jp>.

              sgitopnm: Fix crash with -channel on verbatim SGI image.  Thanks
              Prophet of the Way <afu@wta.att.ne.jp>.

              fitstopnm: Deal properly with NaN in input image.

              pm_floatFromBigendFloat, pm_doubleFromBigendFloat, fitstopnm:
              fix corrupted output.  Broken in 10.46.

              pamtopdbimg: fix corrupted output image.  Thanks Scott Pakin.

              pdbimgtopam: fix corrupted output image.  Thanks Scott Pakin.
